# email_rules

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
email_rules/core/: __init__.py  type_defs.py
email_rules/exporting/: __init__.py  _templates.py  rendering.py  templates.py  type_defs.py
email_rules/rules/: __init__.py  _base_filters.py  basic_actions.py  basic_filters.py  type_defs.py
email_rules/simulation_framework/: __init__.py  rule_application.py  rule_simulation.py  type_defs.py
examples/: example_1.py  example_2.py  test_example_1.py  test_examples.py
static/templates/: action_move_to_folder.j2  action_tag.j2  email_rule.j2  filter_combine_and.j2  filter_combine_and_or.j2  filter_combine_not.j2  filter_combine_or.j2  filter_generic.j2  filter_subject_contains.j2  filter_subject_eq.j2  filter_to_eq.j2  proton_email_rules_file.j2
tests/: conftest.py  test_example.py
tests/data/templates/: action_move_to_folder.txt  action_tag.txt  filter_combine_and.txt  filter_combine_and_three_arguments.txt  filter_combine_not.txt  filter_combine_or.txt  filter_from_eq_case_insensitive.txt  filter_from_eq_case_sensitive.txt  filter_subject_contains_case_insensitive.txt  filter_subject_contains_case_sensitive.txt  filter_subject_eq_case_insensitive.txt  (+8 more)
tests/exporting/: common.py  test_rendering.py  test_templates.py
tests/rules/: common.py  test_basic_actions.py  test_basic_filters.py  test_filter_operations.py  test_filters.py  test_rule_application.py
tests/simulation_framework/: test_rule_application.py  test_rule_simulation.py
