[project]
name = "email_rules"
version = "0.0.1"

dependencies = [
    "Jinja2~=3.1",
    "pydantic~=2.11",
]

[project.optional-dependencies]
dev = [
    "flake8~=7.3",
    "mypy~=1.17",
    "pytest~=8.4",
    "ruff==0.12.7",
]

[tool.setuptools.packages.find]
exclude = ["x_*"]

[tool.mypy]
strict = true
exclude = [
    ".venv",
]

[tool.ruff]
line-length = 120
indent-width = 4

# From the ruff docs
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
